--- a/libs/search-widget/src/common/common-style.scss
+++ b/libs/search-widget/src/common/common-style.scss
@@ -35,35 +35,35 @@
   /* SPACING */
   --spacer: 8px; /* 1unit - 8px */
 
-  --rhythm-0_25: calc(var(--spacer) * .25);  /*   .25 unit -   2px */
-  --rhythm-0_5: calc(var(--spacer) * .5);    /*   .5  unit -   4px */
-  --rhythm-1: var(--spacer);                 /*  1    unit -   8px */
-  --rhythm-1_5: calc(var(--spacer) * 1.5);   /*  1.5  unit -  12px */
-  --rhythm-2: calc(var(--spacer) * 2);       /*  2    unit -  16px */
-  --rhythm-3: calc(var(--spacer) * 3);       /*  3    unit -  24px */
-  --rhythm-4: calc(var(--spacer) * 4);       /*  4    unit -  32px */
-  --rhythm-5: calc(var(--spacer) * 5);       /*  5    unit -  40px */
-  --rhythm-6: calc(var(--spacer) * 6);       /*  6    unit -  48px */
-  --rhythm-7: calc(var(--spacer) * 7);       /*  7    unit -  56px */
-  --rhythm-8: calc(var(--spacer) * 8);       /*  8    unit -  64px */
-  --rhythm-9: calc(var(--spacer) * 9);       /*  9    unit -  72px */
-  --rhythm-10: calc(var(--spacer) * 10);     /*  10   unit -  80px */
-  --rhythm-12: calc(var(--spacer) * 12);     /*  12   unit -  96px */
-  --rhythm-14: calc(var(--spacer) * 14);     /*  14   unit - 112px */
-  --rhythm-16: calc(var(--spacer) * 16);     /*  16   unit - 128px */
-  --rhythm-20: calc(var(--spacer) * 20);     /*  20   unit - 160px */
-  --rhythm-22: calc(var(--spacer) * 22);     /*  22   unit - 176px */
-  --rhythm-24: calc(var(--spacer) * 24);     /*  24   unit - 192px */
-  --rhythm-28: calc(var(--spacer) * 28);     /*  28   unit - 224px */
-  --rhythm-32: calc(var(--spacer) * 32);     /*  32   unit - 256px */
-  --rhythm-36: calc(var(--spacer) * 36);     /*  36   unit - 288px */
-  --rhythm-39: calc(var(--spacer) * 39);     /*  39   unit - 312px */
-  --rhythm-40: calc(var(--spacer) * 40);     /*  40   unit - 320px */
-  --rhythm-46: calc(var(--spacer) * 46);     /*  46   unit - 368px */
-  --rhythm-48: calc(var(--spacer) * 48);     /*  48   unit - 384px */
-  --rhythm-53: calc(var(--spacer) * 53);     /*  53   unit - 424px */
-  --rhythm-56: calc(var(--spacer) * 56);     /*  56   unit - 448px */
-  --rhythm-64: calc(var(--spacer) * 64);     /*  64   unit - 512px */
+  --rhythm-0_25: calc(var(--spacer) * 0.25); /*   .25 unit -   2px */
+  --rhythm-0_5: calc(var(--spacer) * 0.5); /*   .5  unit -   4px */
+  --rhythm-1: var(--spacer); /*  1    unit -   8px */
+  --rhythm-1_5: calc(var(--spacer) * 1.5); /*  1.5  unit -  12px */
+  --rhythm-2: calc(var(--spacer) * 2); /*  2    unit -  16px */
+  --rhythm-3: calc(var(--spacer) * 3); /*  3    unit -  24px */
+  --rhythm-4: calc(var(--spacer) * 4); /*  4    unit -  32px */
+  --rhythm-5: calc(var(--spacer) * 5); /*  5    unit -  40px */
+  --rhythm-6: calc(var(--spacer) * 6); /*  6    unit -  48px */
+  --rhythm-7: calc(var(--spacer) * 7); /*  7    unit -  56px */
+  --rhythm-8: calc(var(--spacer) * 8); /*  8    unit -  64px */
+  --rhythm-9: calc(var(--spacer) * 9); /*  9    unit -  72px */
+  --rhythm-10: calc(var(--spacer) * 10); /*  10   unit -  80px */
+  --rhythm-12: calc(var(--spacer) * 12); /*  12   unit -  96px */
+  --rhythm-14: calc(var(--spacer) * 14); /*  14   unit - 112px */
+  --rhythm-16: calc(var(--spacer) * 16); /*  16   unit - 128px */
+  --rhythm-20: calc(var(--spacer) * 20); /*  20   unit - 160px */
+  --rhythm-22: calc(var(--spacer) * 22); /*  22   unit - 176px */
+  --rhythm-24: calc(var(--spacer) * 24); /*  24   unit - 192px */
+  --rhythm-28: calc(var(--spacer) * 28); /*  28   unit - 224px */
+  --rhythm-32: calc(var(--spacer) * 32); /*  32   unit - 256px */
+  --rhythm-36: calc(var(--spacer) * 36); /*  36   unit - 288px */
+  --rhythm-39: calc(var(--spacer) * 39); /*  39   unit - 312px */
+  --rhythm-40: calc(var(--spacer) * 40); /*  40   unit - 320px */
+  --rhythm-46: calc(var(--spacer) * 46); /*  46   unit - 368px */
+  --rhythm-48: calc(var(--spacer) * 48); /*  48   unit - 384px */
+  --rhythm-53: calc(var(--spacer) * 53); /*  53   unit - 424px */
+  --rhythm-56: calc(var(--spacer) * 56); /*  56   unit - 448px */
+  --rhythm-64: calc(var(--spacer) * 64); /*  64   unit - 512px */
 
   /* TYPOGRAPHY */
   --font-size-base: var(--custom-font-size-base, 16px);
@@ -87,7 +87,6 @@
   --transition-moderate: 0.48s ease;
   --transition-slow: 0.8s cubic-bezier(0.6, 0, 0.4, 1);
 
-
   /* TOKEN */
   --border-radius: var(--custom-border-radius, var(--rhythm-0_25));
 
@@ -95,7 +94,10 @@
   --z-index-modal: var(--custom-z-index-modal, 10010);
   --z-index-modal-backdrop: var(--custom-z-index-modal-backdrop, 10000);
 
-  --shadow-modal: var(--custom-shadow-modal, var(--rhythm-0_25) var(--rhythm-0_25) var(--rhythm-2) rgba(var(--color-dark-stronger-rgb), 0.2));
+  --shadow-modal: var(
+    --custom-shadow-modal,
+    var(--rhythm-0_25) var(--rhythm-0_25) var(--rhythm-2) rgba(var(--color-dark-stronger-rgb), 0.2)
+  );
 
   --color-scrollbar-track: var(--custom-color-scrollbar-track, var(--color-light-stronger));
   --color-scrollbar-thumb: var(--custom-color-scrollbar-thumb, var(--color-dark-stronger));
