--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-process/knowledge-box-processes.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-process/knowledge-box-processes.component.html
@@ -1,9 +1,11 @@
-<stf-section-navbar title="stash.side.trainings"
-                    [sections]="[]">
+<stf-section-navbar
+  title="stash.side.trainings"
+  [sections]="[]">
   <stf-section-navbar-body>
     <div class="knowledge-box-processes">
-      <div *ngIf="cannotTrain | async"
-           class="warning">
+      <div
+        *ngIf="cannotTrain | async"
+        class="warning">
         {{ 'stash.settings.processes.training.not-allowed' | translate }}
       </div>
       <section *ngFor="let type of [trainingTypes.classifier, trainingTypes.labeler]">
@@ -11,8 +13,8 @@
         <p class="last-run">
           <small>
             {{
-            'stash.settings.processes.training.last_run'
-            | translate: { runDate: lastRun[type] ? (lastRun[type] | date: 'YYYY-MM-dd HH:mm') : '–' }
+              'stash.settings.processes.training.last_run'
+                | translate: { runDate: lastRun[type] ? (lastRun[type] | date: 'YYYY-MM-dd HH:mm') : '–' }
             }}
           </small>
         </p>
@@ -21,29 +23,35 @@
           <p>{{ 'stash.settings.processes.' + type + '.info' | translate }}</p>
 
           <div class="labelset-selection">
-            <nsi-dropdown-button [popupRef]="dropdown"
-                                 [open]="open[type]">
+            <nsi-dropdown-button
+              [popupRef]="dropdown"
+              [open]="open[type]">
               {{ 'stash.settings.processes.training.select-labelsets' | translate }}
             </nsi-dropdown-button>
 
             <div class="selection">{{ selectedLabelsets[type].join(', ') }}</div>
           </div>
 
-          <pa-dropdown #dropdown
-                       (onOpen)="open[type] = true"
-                       (onClose)="open[type] = false">
-            <pa-option *ngIf="labelsets | async as labelsets"
-                       dontCloseOnSelect>
-              <pa-checkbox [value]="selectedLabelsets[type].length === labelsets.length"
-                           (change)="toggleAll(type)">
+          <pa-dropdown
+            #dropdown
+            (onOpen)="open[type] = true"
+            (onClose)="open[type] = false">
+            <pa-option
+              *ngIf="labelsets | async as labelsets"
+              dontCloseOnSelect>
+              <pa-checkbox
+                [value]="selectedLabelsets[type].length === labelsets.length"
+                (change)="toggleAll(type)">
                 {{ 'stash.settings.processes.training.all_labelsets' | translate }}
               </pa-checkbox>
             </pa-option>
             <pa-separator></pa-separator>
-            <pa-option *ngFor="let labelset of labelsets | async"
-                       dontCloseOnSelect>
-              <pa-checkbox [value]="selectedLabelsets[type].includes(labelset.value)"
-                           (change)="toggleLabelset(type, labelset.value)">
+            <pa-option
+              *ngFor="let labelset of labelsets | async"
+              dontCloseOnSelect>
+              <pa-checkbox
+                [value]="selectedLabelsets[type].includes(labelset.value)"
+                (change)="toggleLabelset(type, labelset.value)">
                 {{ labelset.title }}
               </pa-checkbox>
             </pa-option>
@@ -55,22 +63,25 @@
             </p>
 
             <div class="agreement-container">
-              <pa-checkbox [disabled]="cannotTrain | async"
-                           [(value)]="agreement[type]">
+              <pa-checkbox
+                [disabled]="cannotTrain | async"
+                [(value)]="agreement[type]">
                 {{ 'stash.settings.processes.training.agreement' | translate }}
               </pa-checkbox>
             </div>
           </ng-container>
         </div>
 
-        <div *ngIf="running[type]"
-             class="active-training warning">
+        <div
+          *ngIf="running[type]"
+          class="active-training warning">
           {{ 'stash.settings.processes.training.active' | translate }}
         </div>
         <div class="cta-container">
-          <pa-button [kind]="running[type] ? 'secondary' : 'primary'"
-                     [disabled]="(!running[type] && (isBillingEnabled | async) && !agreement[type]) || (cannotTrain | async)"
-                     (click)="startOrStopTraining(type)">
+          <pa-button
+            [kind]="running[type] ? 'secondary' : 'primary'"
+            [disabled]="(!running[type] && (isBillingEnabled | async) && !agreement[type]) || (cannotTrain | async)"
+            (click)="startOrStopTraining(type)">
             {{ 'stash.settings.processes.training.' + (running[type] ? 'stop' : 'start') | translate }}
           </pa-button>
         </div>
