[sc-2905] Account dashboard improvements
  - Add account dashboard item in account navbar
  - Display account type on dashboard
  - Navigate to manage kb/billing by clicking on the corresponding container of the dashboard

--- a/apps/dashboard/src/app/account/account-home/account-home.component.html
+++ b/apps/dashboard/src/app/account/account-home/account-home.component.html
@@ -122,7 +122,20 @@
     </div>
 
     <div class="right-column">
-      <div class="container kb-state">
+      <div
+        class="container plan"
+        routerLink="../billing">
+        <div class="plan-name">
+          <strong>{{ 'billing.plan' | translate }}:</strong>
+          <span>{{ 'account.type.' + (accountType | async) | translate }}</span>
+        </div>
+        <pa-icon
+          *ngIf="(accountType | async) === 'stash-team'"
+          name="shield-check"></pa-icon>
+      </div>
+      <div
+        class="container kb-state"
+        routerLink="../kbs">
         <strong>{{ 'stash.state' | translate }}:</strong>
         <span>
           <strong>{{ (kbsTotal | async) || 0 }}</strong>
