Prevent double click when creating account

--- a/apps/dashboard/src/app/setup/setup-step2/setup-step2.component.html
+++ b/apps/dashboard/src/app/setup/setup-step2/setup-step2.component.html
@@ -117,7 +117,7 @@
 
     <div class="setup-step2-actions">
       <pa-button
-        [disabled]="!(verified && available && kbForm.valid)"
+        [disabled]="!(verified && available && kbForm.valid && !loading)"
         (click)="save()">
         {{ 'generic.next_step' | translate }}
       </pa-button>
