Don't create account if already created

--- a/apps/dashboard/src/app/setup/setup-step2/setup-step2.component.html
+++ b/apps/dashboard/src/app/setup/setup-step2/setup-step2.component.html
@@ -22,7 +22,7 @@
       <pa-button
         type="submit"
         fxFlex="0 0 auto"
-        [disabled]="accountName.value.length === 0">
+        [disabled]="accountName.value.length === 0 || verifyDisabled">
         {{ 'generic.verify' | translate }}
       </pa-button>
     </form>
