--- a/apps/dashboard/src/app/components/topbar/kb-switch/kb-switch.component.html
+++ b/apps/dashboard/src/app/components/topbar/kb-switch/kb-switch.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="(knowledgeBoxes | async) && (knowledgeBoxes | async).length > 1">
+<ng-container *ngIf="(knowledgeBoxes | async)?.length > 1">
   <nsi-dropdown-button
     size="small"
     aspect="basic"
