--- a/apps/dashboard/src/app/widgets/edit/edit-widget.component.scss
+++ b/apps/dashboard/src/app/widgets/edit/edit-widget.component.scss
@@ -1,8 +1,6 @@
 @import 'variables';
 
 .edit-widget {
-  width: 770px;
-  max-width: 100%;
   margin: rhythm(4) 0 rhythm(10) 0;
 
   section {
@@ -36,6 +34,7 @@
     display: flex;
     & > div:first-child {
       width: 333px;
+      flex: 0 0 auto;
     }
     .options {
       background-color: $color-light-stronger;
@@ -43,7 +42,8 @@
     }
     .snippet {
       background-color: $color-light-stronger;
-      width: calc(100% - 355px);
+      flex: 1 1 auto;
+      min-width: 0;
     }
   }
 }
@@ -55,8 +55,15 @@ pre {
   border-bottom: 1px solid var(--stf-gray-lighter-3);
   display: flex;
   justify-content: space-between;
-  padding-left: rhythm(2);
+  padding: 0 rhythm(2);
   position: relative;
+  height: rhythm(6);
+  line-height: rhythm(2);
+}
+
+.snippet-buttons {
+  display: flex;
+  gap: rhythm(4);
 }
 
 .tabs {
