--- a/libs/search-widget/src/common/common-style.scss
+++ b/libs/search-widget/src/common/common-style.scss
@@ -105,9 +105,8 @@
   --focus-shadow: var(--custom-focus-shadow, inset 0 0 0 var(--rhythm-0_25) var(--color-primary-lighter));
   --shadow-small: 1px 1px 2px rgba(var(--color-dark-stronger-rgb), 0.3);
 
-  --size-powered-by: calc(var(--rhythm-16) + var(--rhythm-1_5));
-  --default-search-field-padding: var(--rhythm-1) var(--size-powered-by) var(--rhythm-1) var(--rhythm-5);
-  --search-input-padding: var(--rhythm-0_5) var(--rhythm-5) var(--rhythm-0_5) var(--rhythm-0_5);
+  --default-search-field-padding: var(--rhythm-1) var(--rhythm-5);
+  --search-input-padding: 0 0 0 var(--rhythm-4);
 
   --form-widget-padding: var(--custom-form-widget-padding, var(--default-search-field-padding));
   --form-widget-border-width: var(--custom-form-widget-border-width, 1px);
