--- a/libs/search-widget/src/tiles/_tile.scss
+++ b/libs/search-widget/src/tiles/_tile.scss
@@ -1,7 +1,7 @@
 .sw-tile {
   --paragraph-height: var(--rhythm-4);
   --paragraph-gap: var(--rhythm-0_5);
-  --expanded-background-color: var(--color-neutral-lighter);
+  --expanded-background-color: var(--color-neutral-background);
 
   display: flex;
   flex-direction: column;
