--- a/libs/search-widget/src/common/button/Button.scss
+++ b/libs/search-widget/src/common/button/Button.scss
@@ -24,7 +24,7 @@
   }
   &.icon {
     border-radius: 50%;
-    padding: var(--rhythm-1_5);
+    padding: var(--rhythm-1);
   }
 
   &:not(:disabled) {
@@ -41,7 +41,7 @@
   &.solid:not(:disabled):not(:active):hover {
     box-shadow: var(--shadow-small);
   }
-  &:not(.small):not(.icon) {
+  &:not(.small):not(.xsmall):not(.icon) {
     min-width: var(--rhythm-12);
   }
 
@@ -51,10 +51,14 @@
     align-items: center;
   }
 
-  &.small {
+  &.small,
+  &.xsmall {
     font-size: calc(var(--font-size-base) * 0.75);
     line-height: calc(var(--line-height-body) * 0.75);
     padding: var(--rhythm-0_5);
+  }
+  &.large {
+    padding: var(--rhythm-1_5);
   }
 
   &.solid.primary {
@@ -100,8 +104,8 @@
 
   &.basic.secondary {
     --button-background-color: transparent;
-    --button-background-color-hover: var(--color-neutral-light);
-    --button-background-color-active: var(--color-neutral-regular);
+    --button-background-color-hover: var(--color-neutral-lightest);
+    --button-background-color-active: var(--color-neutral-light);
     --button-color: var(--color-dark-stronger);
     --button-color-hover: var(--color-dark-stronger);
     --button-color-active: var(--color-dark-stronger);
