--- a/apps/dashboard/src/app/widgets/edit/edit-widget.component.html
+++ b/apps/dashboard/src/app/widgets/edit/edit-widget.component.html
@@ -60,6 +60,7 @@
               <div
                 formGroupName="attributes"
                 *ngIf="widgetMode !== 'video'">
+                <pa-toggle formControlName="filter">{{ 'stash.widgets.filter' | translate }}</pa-toggle>
                 <pa-toggle formControlName="permalink">{{ 'stash.widgets.permalink' | translate }}</pa-toggle>
                 <pa-toggle formControlName="navigateToLink">{{ 'stash.widgets.navigateToLink' | translate }}</pa-toggle>
               </div>
