Improve common and global style
  - Cleanup code analysis errors by removing custom options currently not in use. We will review the full customization policy of the widget later.
  - Manage unwanted focus outline globally instead of doing so by component

--- a/libs/search-widget/src/common/_global.scss
+++ b/libs/search-widget/src/common/_global.scss
@@ -25,3 +25,22 @@ mark[family] {
   white-space: nowrap;
   border: 0;
 }
+
+// Suppress the focus outline on elements that cannot be accessed via keyboard.
+// This prevents an unwanted focus outline from appearing around elements that
+// might still respond to pointer events.
+//
+// Credit: https://github.com/suitcss/base
+[tabindex='-1']:focus {
+  outline: 0 !important;
+}
+// remove the focus style when clicking on element
+:focus:not(:focus-visible) {
+  outline: none;
+}
+
+ul.dropdown-options {
+  list-style: none;
+  margin-left: 0;
+  padding-left: 0;
+}
